feat: Editing Content

--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/favicon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Social Links Profile</title>
+    <title>Harsh Vyapari - BioLink</title>
   </head>
   <body>
     <main class="link-container">
@@ -15,7 +15,7 @@
 
       <h4>"Front-end Developer and avid reader"</h4>
       <p>
-        <a href="https://github.com" class="media-button">GitHub</a>
+        <a href="https://github.com/harshv5094" class="media-button">GitHub</a>
         <a
           href="https://frontendmentor.io/profile/harshv5094"
           class="media-button"
@@ -28,7 +28,7 @@
           >LinkedIn</a
         >
         <a href="https://instagram.com/harshv5094" class="media-button"
-          >Instagram.com</a
+          >Instagram</a
         >
       </p>
     </main>
